チャット画面のフロント実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,57 @@
 <div class="chat__top">
+  <div class="chat-left">
+    <div class="current-chat">
+      hogefuga
+    </div>
+  </div>
+  <div class="chat-right">
+    <div class="delete-chat">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>
 </div>
+
 <div class="chat__content">
+  <div class="chats">
+    <div class="chat-top">
+      <div class="name">
+        Tom
+      </div>
+      <div class="date">
+        2020/3/31(Wed) 12:43:30
+      </div>
+    </div>
+    <div class="chat-bottom">
+      <div class="message">
+        おはよう
+      </div>
+    </div>
+  </div>
+
+  <div class="chats">
+    <div class="chat-top">
+      <div class="name">
+        Tom
+      </div>
+      <div class="date">
+        2020/3/31(Wed) 12:43:30
+      </div>
+    </div>
+    <div class="chat-bottom">
+      <div class="message">
+        おはよう
+      </div>
+    </div>
+  </div>
 </div>
+
 <div class="chat__bottom">
+  <div class="form-input">
+    <input placeholder="type a message" class="text">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input type="submit" value="送信" class="submit">
 </div>
