--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -3,7 +3,7 @@
 }
 
 .side-bar {
-  background-color: #2F3E51;
+  background-color: #253141;
   width: 300px;
   height: 100vh;
 }
@@ -55,16 +55,101 @@
 .chat__top {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-chat {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.delete-chat {
+  margin-top: 40px;
+}
+
+.delete-chat a {
+  color: darkred;
+  border: 1px solid darkred;
+  text-decoration: none;
+  padding: 20px;
 }
 
 .chat__content {
   background-color: #FAFAFA;
-  height: calc(100vh - 100px -90px);
+  height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.chats {
+  background-color: #FAFAFA;
+  padding: 10px 0 0 0;
+}
+
+.chat-top {
+  display: flex;
+}
+
+.name {
+  margin: 0 10px 10px 0;
+  font-size: 16px;
+  color: #434A54;
+}
+
+.date {
+  font-size: 12px;
+  color: #999;
+}
+
+.message {
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
 }
 
 .chat__bottom {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-input {
+  background-color: white;
+  margin-right: 15px;
+  width: 100%;
+  display: flex;
+}
+
+.text {
+  border: none;
+  padding-left: 10px;
+  height: 50px; 
+  width: 100%;
+}
+
+.submit {
+  background-color: #38AEF0;
+  color: white;
+  font-size: 16px;
+  padding: 0 20px;
+  border: none;
+  height: 50px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
