--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -109,7 +109,7 @@
   margin-bottom: 40px;
 }
 
-.chat__bottom {
+.form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
@@ -124,14 +124,14 @@
   display: flex;
 }
 
-.text {
+.form-message {
   border: none;
   padding-left: 10px;
   height: 50px; 
   width: 100%;
 }
 
-.submit {
+.form-submit {
   background-color: #38AEF0;
   color: white;
   font-size: 16px;
