--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -27,31 +27,15 @@
       </div>
     </div>
   </div>
-
-  <div class="chats">
-    <div class="chat-top">
-      <div class="name">
-        Tom
-      </div>
-      <div class="date">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="chat-bottom">
-      <div class="message">
-        おはよう
-      </div>
-    </div>
-  </div>
 </div>
 
-<div class="chat__bottom">
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
-    <input placeholder="type a message" class="text">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <input type="submit" value="送信" class="submit">
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
