メッセージの表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,22 +11,8 @@
   </div>
 </div>
 
-<div class="chat__content">
-  <div class="chats">
-    <div class="chat-top">
-      <div class="name">
-        Tom
-      </div>
-      <div class="date">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="chat-bottom">
-      <div class="message">
-        おはよう
-      </div>
-    </div>
-  </div>
+<div class="messages">
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
