--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -76,7 +76,7 @@
   padding: 20px;
 }
 
-.chat__content {
+.messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
@@ -88,22 +88,22 @@
   padding: 10px 0 0 0;
 }
 
-.chat-top {
+.upper-message {
   display: flex;
 }
 
-.name {
+.message-user {
   margin: 0 10px 10px 0;
   font-size: 16px;
   color: #434A54;
 }
 
-.date {
+.message-date {
   font-size: 12px;
   color: #999;
 }
 
-.message {
+.message-content {
   font-size: 14px;
   color: #434A54;
   margin-bottom: 40px;
