チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat__top">
   <div class="chat-left">
     <div class="current-chat">
-      hogefuga
+      <%= @room.name %>
     </div>
   </div>
   <div class="chat-right">
